@@ -12,6 +12,7 @@ printf '%s\n'         x/dir/d:ddd > exp-not-ab  || framework_failure_
 printf '%s\n' x/a:aaa x/b:bbb     > exp-not-d   || framework_failure_
 printf '%s\n' x/a:aaa x/b:bbb     > exp-not-dir || framework_failure_
 printf '%s\n' x/a:aaa             > exp-a       || framework_failure_
+printf '%s\n' aaa                 > exp-aaa     || framework_failure_
 
 grep -r --exclude='a*'    . x > out || fail=1
 sort out > k && mv k out
@@ -40,7 +41,10 @@ grep -r --include='a*'    . x > out || fail=1
 compare exp-a out || fail=1
 
 # --include (without --recursive) uses different code
-grep --include=a '^aaa$' x/* > out || fail=1
+grep --include=a --exclude-dir=dir '^aaa$' x/* > out || fail=1
 compare exp-a out || fail=1
+
+grep --exclude=- '^aaa$' - < x/a > out || fail=1
+compare exp-aaa out || fail=1
 
 Exit $fail
